--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 
 <head>
   <meta charset="UTF-8" />
@@ -15,6 +15,7 @@
     <include src="./partials/main/hero.html"></include>
     <include src="./partials/main/advantages.html"></include>
     <include src="./partials/main/examples.html"></include>
+    <include src="./partials/main/team.html"></include>
     <include src="./partials/main/clients.html"></include>
   </main>
   <include src="./partials/shared/footer.html"></include>
