--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -88,7 +88,7 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="">
+                    <a href="./index.html">
                         <div class="link">
                             <div class="item-overlay">
                                 <p class="descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -139,7 +139,7 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="">
+                    <a href="./index.html">
                         <div class="link">
                             <div class="item-overlay">
                                 <p class="descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -189,7 +189,7 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="">
+                    <a href="./index.html">
                         <div class="link">
                             <div class="item-overlay">
                                 <p class="descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -240,7 +240,7 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="">
+                    <a href="./index.html">
                         <div class="link">
                             <div class="item-overlay">
                                 <p class="descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -290,7 +290,7 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="">
+                    <a href="./index.html">
                         <div class="link">
                             <div class="item-overlay">
                                 <p class="descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -391,7 +391,7 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="">
+                    <a href="./index.html">
                         <div class="link">
                             <div class="item-overlay">
                                 <p class="descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
@@ -441,7 +441,7 @@
                     </a>
                 </li>
                 <li class="portfolio-item">
-                    <a href="">
+                    <a href="./index.html">
                         <div class="link">
                             <div class="item-overlay">
                                 <p class="descr">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
