corrected styles for portfolio

--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -50,7 +50,7 @@
                                     ultrices eros in cursus
                                     turpis massa tincidunt dui.</p>
                             </div>
-                            <picture>
+                            <picture class="img">
                                 <source srcset="
                                                             /src/images/jpeg/portfolio/mobile/work1_mobile/tethno_mobile.webp   1x,
                                                             /src/images/jpeg/portfolio/mobile/work1_mobile/tethno_mobile@2x.webp 2x
@@ -102,7 +102,7 @@
                                     ultrices eros in cursus
                                     turpis massa tincidunt dui.</p>
                             </div>
-                            <picture>
+                            <picture class="img">
                                 <source srcset="
                                                             /src/images/jpeg/portfolio/mobile/work2_mobile/work2.webp   1x,
                                                             /src/images/jpeg/portfolio/mobile/work2_mobile/work2@2x.webp 2x
@@ -152,7 +152,7 @@
                                     ultrices eros in cursus
                                     turpis massa tincidunt dui.</p>
                             </div>
-                            <picture>
+                            <picture class="img">
                                 <source srcset="
                                                             /src/images/jpeg/portfolio/mobile/work3_mobile/work3.webp   1x,
                                                             /src/images/jpeg/portfolio/mobile/work3_mobile/work3@2x.webp 2x
@@ -202,7 +202,7 @@
                                     ultrices eros in cursus
                                     turpis massa tincidunt dui.</p>
                             </div>
-                            <picture>
+                            <picture class="img">
                                 <source srcset="
                                                             /src/images/jpeg/portfolio/mobile/work4_mobile/work4.webp   1x,
                                                             /src/images/jpeg/portfolio/mobile/work4_mobile/work4@2x.webp 2x
@@ -253,7 +253,7 @@
                                     ultrices eros in cursus
                                     turpis massa tincidunt dui.</p>
                             </div>
-                            <picture>
+                            <picture class="img">
                                 <source srcset="
                                 /src/images/jpeg/portfolio/mobile/work5_mobile/work5.webp   1x,
                                 /src/images/jpeg/portfolio/mobile/work5_mobile/work5@2x.webp 2x
@@ -303,7 +303,7 @@
                                     ultrices eros in cursus
                                     turpis massa tincidunt dui.</p>
                             </div>
-                            <picture>
+                            <picture class="img">
                                 <source srcset="
                                                             /src/images/jpeg/portfolio/mobile/work6_mobile/work6.webp   1x,
                                                             /src/images/jpeg/portfolio/mobile/work6_mobile/work6@2x.webp 2x
@@ -353,7 +353,7 @@
                                     ultrices eros in cursus
                                     turpis massa tincidunt dui.</p>
                             </div>
-                            <picture>
+                            <picture class="img">
                                 <source srcset="
                                                             /src/images/jpeg/portfolio/mobile/work7_mobile/work7_mobile.webp   1x,
                                                             /src/images/jpeg/portfolio/mobile/work7_mobile/work7_mobile@2x.webp 2x
@@ -404,7 +404,7 @@
                                     ultrices eros in cursus
                                     turpis massa tincidunt dui.</p>
                             </div>
-                            <picture>
+                            <picture class="img">
                                 <source srcset="
                                 /src/images/jpeg/portfolio/mobile/work8_mobile/work8_mobile.webp   1x,
                                 /src/images/jpeg/portfolio/mobile/work8_mobile/work8_mobile@2x.webp 2x
@@ -454,7 +454,7 @@
                                     ultrices eros in cursus
                                     turpis massa tincidunt dui.</p>
                             </div>
-                            <picture>
+                            <picture class="img">
                                 <source srcset="
                                 /src/images/jpeg/portfolio/mobile/work9_mobile/work9_mobile.webp   1x,
                                 /src/images/jpeg/portfolio/mobile/work9_mobile/work9_mobile@2x.webp 2x
@@ -494,7 +494,6 @@
             </ul>
         </div>
     </main>
-
     <include src="./partials/shared/footer.html"></include>
     <script src="./index.js"></script>
 </body>
