corrected functions for modal

--- a/src/index.html
+++ b/src/index.html
@@ -20,10 +20,10 @@
   </main>
   <include src="./partials/shared/footer.html"></include>
   <include src="./partials/shared/modal.html"></include>
-  <script>
+  <!-- <script>
     const ref = document.querySelector('[data-modal]');
 
-  </script>
+  </script> -->
   <script type="module" src="./index.js"></script>
 </body>
 
